# wasm-pack-vite-template

./: Cargo.toml  Makefile  README.md  cargo-generate.toml
src/: lib.rs
www/: bootstrap.js  index.html  package.json  pnpm-lock.yaml  style.css
